--- a/static/html/default/templates/report/template.html
+++ b/static/html/default/templates/report/template.html
@@ -13,16 +13,18 @@
 	</style>
 	<table style="width: 100%; text-align: center;">
 		<tr>
-			<td style="width: 33%;">
+			<td style="width: 30%;">
 				<p>{razon_social}</p>
 				<p>{direccion}</p>
-				<p>Telf.: {telefono}</p>
+				<p>Tel: {telefono}</p>
 			</td>
 			<td style="width: 33%;">
 				<img src="static/img/banner.jpg" style="width: 120px;" />
-			</td>
-			<td style="width: 33%; font-size:16px;">
+				<br/>
 				{titulo_reporte}
+			</td>
+			<td style="width: 33%;">
+				Impreso por: {usuario} {fecha} {hora}
 			</td>
 		</tr>
 	</table>
