--- a/static/html/default/templates/inventario/traslado_detalle.html
+++ b/static/html/default/templates/inventario/traslado_detalle.html
@@ -639,7 +639,7 @@
             <input type="text" id="stalla" value=""/>
         </div>
         <br/>
-        <button class="primary" id="btnAplicar" onclick="commit();">Aplicar</button>
+        <button class="primary" id="btnAplicar" onclick="commit();">Agregar</button>
         <br/>
         <br/>
         Proveedor
