--- a/static/html/default/templates/report/reporteInventarioTalla.html
+++ b/static/html/default/templates/report/reporteInventarioTalla.html
@@ -4,7 +4,7 @@
 		width: 100%;
 	}
 	table td{
-		width: 18%;
+		width: 15%;
 	}
 	
 	table thead tr th{
@@ -32,6 +32,9 @@
 				Color
 			</th>
 			<th>
+				Talla
+			</th>
+			<th>
 				Pares
 			</th>
 			<th>
@@ -49,6 +52,7 @@
 	<tr>
 		<td>{estilo}</td>
 		<td>[{color}] {nombre_color}</td>
+		<td>{talla}</td>
 		<td>{pares}</td>
 		<td>${total_costo}</td>
 		<td>${total_precio}</td>
