--- a/static/html/default/templates/report/reporteInventarioLinea.html
+++ b/static/html/default/templates/report/reporteInventarioLinea.html
@@ -13,6 +13,9 @@
 	}
 	
 </style>
+Saldos a la fecha: {fecha_saldos}
+<br/>
+<br/>
 <!-- START bodegas -->
 <strong>{bodega_nombre}</strong>
 <table>
