--- a/static/html/default/templates/report/reporteInventarioProveedor.html
+++ b/static/html/default/templates/report/reporteInventarioProveedor.html
@@ -16,6 +16,9 @@
 		font-size: 12px;
 	}
 </style>
+Saldos a la fecha: {fecha_saldos}
+<br/>
+<br/>
 <!-- START bodegasylineas -->
 <strong>[{bodega}] {bodega_nombre}</strong>
 <br/>
